--- a/detaile.html
+++ b/detaile.html
@@ -45,7 +45,7 @@
 
 		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://pan.fmkli.ga/" target="_blank"><span class="iconfont icongame"></span>Fmkli的个人网盘</a>
 
-		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://blog.fmkli.ga/newemail/" target="_blank"><span class="iconfont icongame"></span>邮箱申请</a>
+		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://fmkli.js.org/fkemail/" target="_blank"><span class="iconfont icongame"></span>邮箱申请</a>
 
 
         </div>
