--- a/detaile.html
+++ b/detaile.html
@@ -29,7 +29,7 @@
                 <div class="rin-left-slogan">欢迎访问我的小站</div>
         <div class="rin-card-part" id="website">
 
-                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://blog.fmkli.ga" target="_blank"><span class="iconfont iconBlog"></span> Blog</a>
+                <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://fkblog.fmkli.workers.dev/" target="_blank"><span class="iconfont iconBlog"></span> Blog</a>
 
                 <a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="http://fmkli.ccaeo.com/" target="_blank"><span class="iconfont iconBlog"></span> 备用Blog</a>
 
