--- a/website navigation/index.html
+++ b/website navigation/index.html
@@ -49,6 +49,16 @@
 					原罪_超凡制作的搜索页
 				</p>
 			</div>
+			<div class="box">
+				<div class="img">
+					<a href="https://fmkli.js.org/website navigation/index3.html" target="_blank">
+						<img src="./Flysoft_files/Search.png">
+					</a>
+				</div>
+				<p>
+					
+				</p>
+			</div>
 		<script>
 			var stop, staticx;
 var img = new Image();
