--- a/website navigation/index.html
+++ b/website navigation/index.html
@@ -51,12 +51,12 @@
 			</div>
 			<div class="box">
 				<div class="img">
-					<a href="https://fmkli.js.org/website navigation/index3.html" target="_blank">
+					<a href="https://imfmkli.xyz" target="_blank">
 						<img src="./Flysoft_files/Search.png">
 					</a>
 				</div>
 				<p>
-					
+					旧版导航页
 				</p>
 			</div>
 		<script>
