--- a/website navigation/index.html
+++ b/website navigation/index.html
@@ -31,7 +31,7 @@
 		<div class="container">
 			<div class="box">
 				<div class="img">
-					<a href="https://fmkli.js.org/website navigation/index2.html" target="_blank">
+					<a href="https://fmkli.rthe.xyz" target="_blank">
 						<img src="./Flysoft_files/Search.png">
 					</a>
 				</div>
