--- a/website navigation/index.html
+++ b/website navigation/index.html
@@ -51,7 +51,7 @@
 			</div>
 			<div class="box">
 				<div class="img">
-					<a href="https://imfmkli.xyz" target="_blank">
+					<a href="https://fmkli.fun" target="_blank">
 						<img src="./Flysoft_files/Search.png">
 					</a>
 				</div>
