--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 							<div class="nav">
 							<h3>Fmkli·服务 <i></i></h3>
-							<a href="https://fmkli.js.org/website%20navigation/">FK导航页</a>
+							<a href="https://fmkli.js.org/website%20navigation/">FK导航页</a> -
 							<a href="http://fkhost.ml">FK免费网站托管</a> -
 							<a href="http://dm.fkhost.ml/">二级域名申请</a> -
 							<a href="https://fmkli.js.org/fkemail/">邮箱申请</a>
