--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <span class="bg s_ipt_wr"><input id="kw" name="wd" class="s_ipt" value="" maxlength="255" autocomplete="off" autofocus=""></span><span class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span>
 							<div class="nav">
 							<h3>Fmkli·网站 <i></i></h3>
-							<a href="https://blog.fmkli.ga/">Fmkli的博客</a> -
+							<a href="https://blog.fmkli.fun/">Fmkli的博客</a> -
 							<a href="http://fmkli.ccaeo.com/">Fmkli的备用博客</a> -
 							<a href="http://fmkli.ccaeo.com/bbs/upload/">FKFK论坛</a> -
 							<a href="https://pan.fmkli.ga/">FK个人公开盘</a>
