--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- 卡片的内容 -->
         <div class="mdui-card-content mdui-typo">蛤，小可爱，我是Fmkli，一位学生，喜欢编程，喜欢火车！<br />还请多多指教！
             <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" rel="nofollow">关注我</a> 或 通过BiliBili<a
-                href="" rel="nofollow">与我交流awa</a>。
+                href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
             <br>你也可以通过邮箱找到我：<code>fmkli@mail.fmkli.ga</code>
         </div>
 
