--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
                     class="mdui-list-item-icon mdui-icon material-icons">mail</i>
                 <div class="mdui-list-item-content">Email</div>
             </li>
+            <li class="mdui-list-item mdui-ripple" onclick="mdui.alert('你真的点我了awa（别打我）', '震惊')"> <i
+                    class="mdui-list-item-icon mdui-icon material-icons">mail</i>
+                <div class="mdui-list-item-content">点我awa是笨蛋</div>
+            </li>    
         </ul>
 
     </div>
