--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
         </div>
 
     </div>
+    <!-- 音乐卡片 -->
+    <div class="mdui-card card">
+
+        <div class="mdui-card-primary">
+            <div class="mdui-card-primary-title">听音乐awa</div>
+        </div>
+
+        <!-- 卡片的内容 -->
+        <div class="mdui-card-content mdui-typo">
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=4010198&auto=1&height=66"></iframe>
+        </div>
+
+    </div>
 
     <!-- 近期文章 -->
     <div class="mdui-card card">
