--- a/detaile.html
+++ b/detaile.html
@@ -36,13 +36,14 @@
 		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="http://dns.fmkli.ga" target="_blank"><span class="iconfont icongame"></span> 二级域名</a>
 
 		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://fmkli.js.org/fkemail/" target="_blank"><span class="iconfont icongame"></span>邮箱申请</a>
+		
+		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://music.fmkli.ga/" target="_blank"><span class="iconfont icongame"></span>收费音乐解锁</a>
 
         </div>
 
 
                 <div class="rin-card-part" id="footer">
-                    <div class="rin-card-content">©2021 Fmkli | BG: <a
-                            href="https://www.pixiv.net/artworks/56652667" id="bg-link" target="_blank">Pixiv</a></div>
+                    <div class="rin-card-content">©2021 Fmkli</div>
                 </div>
             </div>
         </div>
