--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
         </div>
 
     </div>
+        <!-- 咕鸽恐龙 -->
+    <div class="mdui-card card">
+
+        <div class="mdui-card-primary">
+            <div class="mdui-card-primary-title">咕鸽浏览器的踩蛋</div>
+        </div>
+
+        <!-- 卡片的内容 -->
+        <div class="mdui-card-content mdui-typo">
+            <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="650" height="235" src="https://dino.fmkli.ga/"></iframe>
+        </div>
+
+    </div>
 
     <!-- 最新天气，CYF 的 API 删了，到时候再补上 
     <div class="mdui-card card">
