--- a/detaile.html
+++ b/detaile.html
@@ -39,6 +39,7 @@
 		
 		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://music.fmkli.ga/" target="_blank"><span class="iconfont icongame"></span>收费音乐解锁</a>
 
+		<a class="mdui-btn mdui-btn-raised rin-btn rin-btn-blue rin-btn-left mdui-text-capitalize" href="https://m3u8.fmkli.ga/" target="_blank"><span class="iconfont icongame"></span>M3U8视频下载</a>
         </div>
 
 
