--- a/index.html
+++ b/index.html
@@ -9,9 +9,30 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/css/mdui.min.css"
         integrity="sha384-cLRrMq39HOZdvE0j6yBojO4+1PrHfB7a9l5qLcmRm/fiWXYY+CndJPmyu5FV/9Tw" crossorigin="anonymous" />
     <link rel="stylesheet" href="home.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body class="">
+    <!-- PWA -->
+    <script>
+        // 判断浏览器是否支持 service worker
+        if ('serviceWorker' in navigator) {
+            // load 事件完成之后才注册 service worker
+            window.addEventListener('load', function () {
+                // 注册 sw.js
+                navigator.serviceWorker.register('/sw.js')
+                    .then(function (registration) {
+                        // 注册成功
+                        console.log('sw.js 注册成功', registration.scope);
+                    })
+                    .catch(function (err) {
+                        // 注册失败:(
+                        console.log('sw.js 注册失败 ', err);
+                    });
+            });
+        }
+    </script>
+    <!-- PWA END -->
     <!-- Banner -->
     <div class="mdui-appbar mdui-shadow-0 mdui-appbar-fixed mdui-text-color-white">
         <div class="mdui-toolbar mdui-color-theme">
