--- a/index.html
+++ b/index.html
@@ -135,7 +135,11 @@
 
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.fmkli.ga'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
-                <div class="mdui-list-item-content">Fmkli的Blog</div>
+                <div class="mdui-list-item-content">Fmkli的Blog（github节点）</div>
+            </li>
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.fmkli.fun'">
+                <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
+                <div class="mdui-list-item-content">Fmkli的Blog（cf pages节点）</div>
             </li>
             
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='http://fmkli.ccaeo.com/'">
