--- a/index.html
+++ b/index.html
@@ -135,16 +135,16 @@
 
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.fmkli.ga'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
-                <div class="mdui-list-item-content">Fmkli的Blog（github节点）</div>
+                <div class="mdui-list-item-content">Blog（github节点）</div>
             </li>
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.fmkli.fun'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
-                <div class="mdui-list-item-content">Fmkli的Blog（cf pages节点）</div>
+                <div class="mdui-list-item-content">Blog（cf pages节点）</div>
             </li>
             
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='http://fmkli.ccaeo.com/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
-                <div class="mdui-list-item-content">Fmkli的备用Blog</div>
+                <div class="mdui-list-item-content">备用Blog</div>
             </li>
 
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.js.org/detaile.html'"> <i
