--- a/detaile.html
+++ b/detaile.html
@@ -163,5 +163,8 @@
    }
 </script>
 <!--复制到此为止-->
+<div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
+    <a href="https://myssl.com/fmkli.js.org?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
+</div>
 </body>
 </html>
