--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
 
     </div>
 
+        <!-- 休闲游戏 -->
+    <div class="mdui-card card">
+
+        <div class="mdui-card-primary">
+            <div class="mdui-card-primary-title">Game</div>
+        </div>
+
+        <!-- 卡片的内容 -->
+        <div class="mdui-card-content mdui-typo">
+            <a href="https://game.fmkli.ga/?lang=zh_cn">点我！</a><br>
+        </div>
+
+    </div>
+
     <!-- 最新天气，CYF 的 API 删了，到时候再补上 
     <div class="mdui-card card">
 
