--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@
             <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
             <li class="mdui-subheader">相关链接</li>
             
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://blog.fmkli.ga'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.js.org'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
                 <div class="mdui-list-item-content">Fmkli</div>
             </li>
