--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
 
     <footer class="mdui-text-center">
         <p>&copy; 2021 Fmkli</p><hr>
+        <p>本站由笨笨的Fmkli搭建 - 由YFUN提供页面 - 由Github page支撑 - 由cloudflare托管域名</p><br>
         <p>感谢<a href="https://yfun.top">YFun</a>提供此页面！</p>
     </footer>
 
