--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
         integrity="sha384-cLRrMq39HOZdvE0j6yBojO4+1PrHfB7a9l5qLcmRm/fiWXYY+CndJPmyu5FV/9Tw" crossorigin="anonymous" />
     <link rel="stylesheet" href="home.css">
     <link rel="manifest" href="manifest.json">
+        <style type="text/css">
+        #right-menu{
+            position: absolute;
+            width: 200px;
+            height: auto;
+            border: 1px #ccc solid;
+            display: none;
+            padding:2px 0; 
+            box-shadow: 5px 5px 5px #ccc;
+        }
+        .menu-item{
+            height: 25px;
+            margin:4px 0; 
+            padding:0 10px;
+            cursor: pointer;
+        }
+        .menu-item:hover{
+            background-color: #ccc;
+        }
+        .menu-item-separator{
+            border-top:1px #ccc solid;
+            height: 1px;
+        }
+    </style>
 </head>
 
 <body class="">
@@ -235,6 +259,26 @@
     <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
         <a href="https://myssl.com/fmkli.js.org?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
     </div>
+<div  id="right-menu">
+    <div class="menu-item"><a href="https://fmkli.js.org">Fmkli</a></div>
+    <div class="menu-item"><a href="https://blog.fmkli.ga">Fmkli的博客</a></div>
+    <div class="menu-item-separator"></div>
+    <div class="menu-item">你右键了awa</div>
+    <div class="menu-item">awa</div>
+</div>
+    <script type="text/javascript">
+        window.oncontextmenu = function(e){
+            e.preventDefault(); //阻止浏览器自带的右键菜单显示
+            var menu = document.getElementById("right-menu");
+            menu.style.display = "block"; //将自定义的“右键菜单”显示出来
+            menu.style.left = e.clientX + "px";  //设置位置，跟随鼠标
+            menu.style.top = e.clientY+"px"; 
+        }
+        window.onclick = function(e){ //点击窗口，右键菜单隐藏
+            var menu = document.getElementById("right-menu");
+            menu.style.display = "none";
+        }
+    </script>
 </body>
 
 </html>
