--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
         </div>
 
     </div>
+    <!-- 介绍卡片 -->
+    <div class="mdui-card card">
+
+        <div class="mdui-card-primary">
+            <div class="mdui-card-primary-title">公告</div>
+        </div>
+
+        <!-- 卡片的内容 -->
+        <div class="mdui-card-content mdui-typo">叭叭~<br />Fmkli的博客的github节点时好时坏~
+        </div>
+
+    </div>
     <!-- 音乐卡片 -->
     <div class="mdui-card card">
 
@@ -156,9 +168,9 @@
                 <div class="mdui-list-item-content">Blog（cf pages节点）</div>
             </li>
             
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='http://fmkli.ccaeo.com/'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fkjekyll.vercel.app/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
-                <div class="mdui-list-item-content">备用Blog</div>
+                <div class="mdui-list-item-content">备用Blog（vercel）</div>
             </li>
 
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.js.org/detaile.html'"> <i
