--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
     </div>
-    <!-- 介绍卡片 -->
+    <!-- 公告 -->
     <div class="mdui-card card">
 
         <div class="mdui-card-primary">
@@ -112,8 +112,8 @@
 
         <!-- 卡片的内容 -->
         <div class="mdui-card-content mdui-typo">
-            <a href="https://dino.fmkli.ga/">点我！</a><br>
-            <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="650" height="235" src="https://dino.fmkli.ga/"></iframe>
+            <a href="https://fmkli.js.org/dino/">点我！</a><br>
+            <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="650" height="235" src="https://fmkli.js.org/dino/"></iframe>
         </div>
 
     </div>
@@ -127,7 +127,7 @@
 
         <!-- 卡片的内容 -->
         <div class="mdui-card-content mdui-typo">
-            <a href="https://game.fmkli.ga/?lang=zh_cn">点我！</a><br>
+            <a href="https://fmkli.js.org/adarkroom/?lang=zh_cn">点我！</a><br>
         </div>
 
     </div>
