--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.js.org/blog/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
-                <div class="mdui-list-item-content">Blog（github节点）</div>
+                <div class="mdui-list-item-content">Blog</div>
             </li>
             
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fkjekyll.vercel.app/'">
