--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">叭叭~<br />Fmkli的博客的github节点时好时坏~
+        <div class="mdui-card-content mdui-typo">叭叭~<br />目前无公告
         </div>
 
     </div>
