--- a/index.html
+++ b/index.html
@@ -103,19 +103,23 @@
         </div>
 
     </div>
-        <!-- 咕鸽恐龙 -->
-    <div class="mdui-card card">
-
-        <div class="mdui-card-primary">
-            <div class="mdui-card-primary-title">咕鸽浏览器的踩蛋</div>
-        </div>
-
+    <!-- 咕鸽小恐龙 -->
+    <div class="mdui-panel-item">
+      <div class="mdui-panel-item-header">
+        <div class="mdui-panel-item-title">咕鸽小恐龙</div>
+        <div class="mdui-panel-item-summary">awa</div>
+        <i class="mdui-panel-item-arrow mdui-icon material-icons">awa</i>
+      </div>
+      <div class="mdui-panel-item-body">
         <!-- 卡片的内容 -->
         <div class="mdui-card-content mdui-typo">
             <a href="https://fmkli.js.org/dino/">点我！</a><br>
             <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="650" height="235" src="https://fmkli.js.org/dino/"></iframe>
         </div>
+        <div class="mdui-panel-item-actions">
 
+        </div>
+      </div>
     </div>
 
         <!-- 休闲游戏 -->
