--- a/index.html
+++ b/index.html
@@ -103,23 +103,19 @@
         </div>
 
     </div>
-    <!-- 咕鸽小恐龙 -->
-    <div class="mdui-panel-item">
-      <div class="mdui-panel-item-header">
-        <div class="mdui-panel-item-title">咕鸽小恐龙</div>
-        <div class="mdui-panel-item-summary">awa</div>
-        <i class="mdui-panel-item-arrow mdui-icon material-icons">awa</i>
-      </div>
-      <div class="mdui-panel-item-body">
+        <!-- 咕鸽恐龙 -->
+    <div class="mdui-card card">
+
+        <div class="mdui-card-primary">
+            <div class="mdui-card-primary-title">咕鸽浏览器的踩蛋</div>
+        </div>
+
         <!-- 卡片的内容 -->
         <div class="mdui-card-content mdui-typo">
             <a href="https://fmkli.js.org/dino/">点我！</a><br>
             <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="650" height="235" src="https://fmkli.js.org/dino/"></iframe>
         </div>
-        <div class="mdui-panel-item-actions">
 
-        </div>
-      </div>
     </div>
 
         <!-- 休闲游戏 -->
@@ -232,7 +228,7 @@
 
     <footer class="mdui-text-center">
         <p>&copy; 2021 Fmkli</p><hr>
-        <p>本站由笨笨的Fmkli搭建 - 由YFUN提供页面 - 由Github page支撑 - 由cloudflare托管域名</p><br>
+        <p>本站由笨笨的Fmkli搭建 - 由YFUN提供页面 - 由Github page支撑 - 由cloudflare托管域名 - 咕咕咕</p><br>
         <p>感谢<a href="https://yfun.top">YFun</a>提供此页面！</p>
     </footer>
 
