--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">叭叭~<br />目前无公告
+        <div class="mdui-card-content mdui-typo">叭叭~<br />博客公告:飞哥的博客由于没有优质文章，
+请尽快前往我的博客留言板查看留言并回复，不然则删除，并且三天后就再次检查<br/>
         </div>
 
     </div>
