--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">蛤，小可爱，我是Fmkli，一位学生，喜欢编程，喜欢火车！<br />还请多多指教！
+        <div class="mdui-card-content mdui-typo">蛤，小可爱，我是Fmkli，一位学生，喜欢编程，喜欢火车！<br />详细可看<a href="https://fmkli.js.org/blog/aboutme/">https://fmkli.js.org/blog/aboutme/</a></br>还请多多指教！
             <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" rel="nofollow">关注我</a> 或 通过BiliBili<a
                 href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
             <br>你也可以通过邮箱找到我：<code>fmkli@mail.fmkli.ga</code>
@@ -71,8 +71,8 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">叭叭~<br />博客公告:飞哥的博客由于没有优质文章，
-请尽快前往我的博客留言板查看留言并回复，不然则删除，并且三天后就再次检查<br/>
+        <div class="mdui-card-content mdui-typo">叭叭~</br>博客公告:飞哥的博客由于没有优质文章，
+请尽快前往我的博客留言板查看留言并回复，不然则删除，并且三天后就再次检查</br>
         </div>
 
     </div>
