--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">叭叭~</br>博客公告:飞哥的博客由于没有优质文章，
-请尽快前往我的博客留言板查看留言并回复，不然则删除，并且三天后就再次检查</br>
+        <div class="mdui-card-content mdui-typo">叭叭~</br>博客公告:飞哥的博客未见更新，已撤销友链</br>
         </div>
 
     </div>
