--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="mdui-list-item-content">FKFK论坛</div>
             </li>
             
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://pan.fmkli.ga/'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fkpan.herokuapp.com/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">input</i>
                 <div class="mdui-list-item-content">Fmkli的网盘</div>
             </li>
