--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <br>欢迎在 Bilibili 上 <a href="https://space.bilibili.com/543825809" rel="nofollow">关注我</a> 或 通过BiliBili<a
                 href="https://message.bilibili.com/#/whisper/mid543825809" rel="nofollow">与我交流awa</a>。
             <br>你也可以通过邮箱找到我：<code>fmkli@mail.fmkli.ga</code>
+            <br>留言请去：<a href="https://fmkli.js.org/blog/yousay/">https://fmkli.js.org/blog/yousay/</a>
         </div>
 
     </div>
