--- a/index.html
+++ b/index.html
@@ -105,31 +105,17 @@
         </div>
 
     </div>
-        <!-- 咕鸽恐龙 -->
+        <!-- Game -->
     <div class="mdui-card card">
 
         <div class="mdui-card-primary">
-            <div class="mdui-card-primary-title">咕鸽浏览器的踩蛋</div>
+            <div class="mdui-card-primary-title">休闲网页游戏</div>
         </div>
 
         <!-- 卡片的内容 -->
         <div class="mdui-card-content mdui-typo">
-            <a href="https://fmkli.js.org/dino/">点我！</a><br>
-            <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="650" height="235" src="https://fmkli.js.org/dino/"></iframe>
-        </div>
-
-    </div>
-
-        <!-- 休闲游戏 -->
-    <div class="mdui-card card">
-
-        <div class="mdui-card-primary">
-            <div class="mdui-card-primary-title">Game</div>
-        </div>
-
-        <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">
-            <a href="https://fmkli.js.org/adarkroom/?lang=zh_cn">点我！</a><br>
+            <a href="https://fmkli.js.org/dino/">谷歌小恐龙(点我)</a><br>
+            <a href="https://fmkli.js.org/adarkroom/?lang=zh_cn">ADK(点我)</a><br>
         </div>
 
     </div>
