--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                 <div class="mdui-list-item-content">公共服务</div>
             </li>
 
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='http://fmkli.ccaeo.com/bbs/upload/'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmklisforum.freeflarum.com'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">wifi_tethering</i>
-                <div class="mdui-list-item-content">FKFK论坛</div>
+                <div class="mdui-list-item-content">Fmkli的论坛</div>
             </li>
             
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fkpan.herokuapp.com/'">
@@ -189,8 +189,8 @@
             <li class="mdui-list-item mdui-ripple" onclick="mdui.alert('你真的点我了awa（别打我）', '震惊')"> <i
                     class="mdui-list-item-icon mdui-icon material-icons">mail</i>
                 <div class="mdui-list-item-content">点我awa是笨蛋</div>
-            </li>    
-        </ul>
+            </li>
+         </ul>
 
     </div>
     <!-- 赞赏弹窗 -->
