--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">叭叭~</br>博客公告:</br>1.飞哥的博客未见更新，已撤销友链</br>2.添加Fanconma’s Blog友链</br>
+        <div class="mdui-card-content mdui-typo">叭叭~</br>博客公告:</br>1.已撤销小岚的小窝友链</br>
         </div>
 
     </div>
