--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                 <div class="mdui-list-item-content">Blog</div>
             </li>
             
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fkjekyll.vercel.app/'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.giki.app/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
-                <div class="mdui-list-item-content">备用Blog（vercel）</div>
+                <div class="mdui-list-item-content">日记·随便写写</div>
             </li>
 
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.js.org/detaile.html'"> <i
