--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            看来又有一位小可爱来到这了呢awa
+            挣扎在深处的小小网站<br>Fmkli的网站
         </h2>
     </nav>
 
