--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.giki.app/'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
-                <div class="mdui-list-item-content">日记·随便写写</div>
+                <div class="mdui-list-item-content">随便说说</div>
             </li>
 
             <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmkli.js.org/detaile.html'"> <i
