--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            挣扎在深处的小小网站<br><center>Fmkli的网站</center><br>
+            挣扎在深处的小小网站<br><center>Fmkli的网站</center><br><center><form id="form" name="f" action="https://www.baidu.com/s" class="fm"><input type="hidden" name="ie" value="utf-8"><input type="hidden" name="f" value="8"><input type="hidden" name="rsv_bp" value="1"><input type="hidden" name="rsv_idx" value="1"><input type="hidden" name="tn" value="baidu"><span class="bg s_ipt_wr"><input id="kw" name="wd" class="s_ipt" value="" maxlength="255" autocomplete="off" autofocus=""></span><span class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span>
         </h2>
-        <center><form id="form" name="f" action="https://www.baidu.com/s" class="fm"><input type="hidden" name="ie" value="utf-8"><input type="hidden" name="f" value="8"><input type="hidden" name="rsv_bp" value="1"><input type="hidden" name="rsv_idx" value="1"><input type="hidden" name="tn" value="baidu"><span class="bg s_ipt_wr"><input id="kw" name="wd" class="s_ipt" value="" maxlength="255" autocomplete="off" autofocus=""></span><span class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span>
         </center>
     </nav>
 
