--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <nav id="banner" class="mdui-container-fluid mdui-valign">
         <h2 style="color:white!important;" class="banner-title mdui-center mdui-text-color-theme">
-            <center>挣扎在深处的小小网站</center><br><center>Fmkli的网站</center><br><center><form id="form" name="f" action="https://www.baidu.com/s" class="fm"><input type="hidden" name="ie" value="utf-8"><input type="hidden" name="f" value="8"><input type="hidden" name="rsv_bp" value="1"><input type="hidden" name="rsv_idx" value="1"><input type="hidden" name="tn" value="baidu"><span class="bg s_ipt_wr"><input id="kw" name="wd" class="s_ipt" value="" maxlength="255" autocomplete="off" autofocus=""></span><span class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span>
+            <center>挣扎在深处的小小网站</center><br><center>Fmkli的网站</center><br>
         </h2>
         </center>
     </nav>
@@ -74,6 +74,20 @@
         </div>
 
     </div>
+
+    <!-- 百度亿下，你不知道 -->
+    <div class="mdui-card card">
+
+        <div class="mdui-card-primary">
+            <div class="mdui-card-primary-title">百度亿下，你不知道</div>
+        </div>
+
+        <!-- 卡片的内容 -->
+        <div class="mdui-card-content mdui-typo"><center><form id="form" name="f" action="https://www.baidu.com/s" class="fm"><input type="hidden" name="ie" value="utf-8"><input type="hidden" name="f" value="8"><input type="hidden" name="rsv_bp" value="1"><input type="hidden" name="rsv_idx" value="1"><input type="hidden" name="tn" value="baidu"><span class="bg s_ipt_wr"><input id="kw" name="wd" class="s_ipt" value="" maxlength="255" autocomplete="off" autofocus=""></span><span class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span>
+        </div>
+
+    </div>
+
     <!-- 公告 -->
     <div class="mdui-card card">
 
