--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo"><center><form id="form" name="f" action="https://www.baidu.com/s" class="fm"><input type="hidden" name="ie" value="utf-8"><input type="hidden" name="f" value="8"><input type="hidden" name="rsv_bp" value="1"><input type="hidden" name="rsv_idx" value="1"><input type="hidden" name="tn" value="baidu"><span class="bg s_ipt_wr"><input id="kw" name="wd" class="s_ipt" value="" maxlength="255" autocomplete="off" autofocus=""></span><span class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span>
+        <div class="mdui-card-content mdui-typo"><center><form id="form" name="f" action="https://www.baidu.com/s" class="fm"><input type="hidden" name="ie" value="utf-8"><input id="kw" name="wd" class="s_ipt"></span><span class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span>
         </div>
 
     </div>
