--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     class="mdui-list-item-icon mdui-icon material-icons">mail</i>
                 <div class="mdui-list-item-content">Email</div>
             </li>
-            <li class="mdui-list-item mdui-ripple" onclick="mdui.alert('你真的点我了awa（别打我）', '震惊')"> <i
+            <li class="mdui-list-item mdui-ripple" onclick="mdui.alert('哈哈哈！笨蛋！（别打我嘿嘿嘿）', '哈哈哈')"> <i
                     class="mdui-list-item-icon mdui-icon material-icons">mail</i>
                 <div class="mdui-list-item-content">点我awa是笨蛋</div>
             </li>
