--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body class="">
+    <script src="//topurl.cn/chat.js" async="async" fold></script>
     <!-- PWA -->
     <script>
         // 判断浏览器是否支持 service worker
