--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 ﻿<html lang="zh-CN">
 <head>
     <meta charset="utf-8">
-    <title>Fmkli | 主页</title>
+    <title>YOUNK | 主页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="./mdui/css/mdui.min.css">
     <link rel="stylesheet" href="./assets/css/main.css">
@@ -12,7 +12,7 @@
 <div id="rin-bg"></div>
 <main id="rin-main">
     <div id="rin-headimg"></div>
-    <div class="rin-name">Fmkli</div>
+    <div class="rin-name">YOUNK</div>
     <div class="rin-description">欢迎访问我的小站</div>
     <div class="rin-tr"></div>
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="detaile.html">更多信息awa</a>
