--- a/website navigation/index.html
+++ b/website navigation/index.html
@@ -45,18 +45,22 @@
 							<a href="http://58.com/">58同城</a>
 							<div class="clear"></div>
 							<div>
+							
+							<div class="nav">
+							<h3>网站收录<i></i></h3>
+							<a href="https://fmkli.js.org/">Fmkli的主页</a>
+							<div class="clear"></div>
+							<div>
 
 							<div class="nav">
-							<h3>Fmkli<i></i></h3>
-							<a href="https://fmkli.js.org/">fmkli的主页</a>
+							<h3>更多<i></i></h3>
+							<a href="https://fmkli.js.org/">Fmkli的主页</a>
 							<a href="https://fmkli.rthe.net/dogedogedoge.html">彩蛋</a>
 							<div class="clear"></div>
 							<div>
                         
                     </div>
                 </div>
-				<h3>听首歌？<i></i></h3>
-				<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="330" height="86" src="./FK搜索主页_files/player.html"></iframe>
 
 <!--[if lte IE 9]><!-->
 <script>document.getElementById('kw').focus()</script><!--<![endif]--><!----></div></div></div></div></div></div></form></div></div></div></div></div><script defer="" src="./FK搜索主页_files/cdn-check.rth"></script>
