--- a/website navigation/index.html
+++ b/website navigation/index.html
@@ -56,6 +56,7 @@
 							<h3>更多<i></i></h3>
 							<a href="https://fmkli.js.org/">Fmkli的主页</a>
 							<a href="https://fmkli.rthe.net/dogedogedoge.html">彩蛋</a>
+							<a href="https://fmkli.js.org/website%20navigation/new/">添加收录</a>
 							<div class="clear"></div>
 							<div>
                         
