--- a/index.html
+++ b/index.html
@@ -191,15 +191,15 @@
                 <div class="mdui-list-item-content">网址导航</div>
             </li>
 
-            <li class="mdui-subheader">好玩得</li>
+            <li class="mdui-subheader">好玩得游戏</li>
             
             <li class="mdui-list-item mdui-ripple" onclick="window.open('https://fmkli.js.org/adarkroom/?lang=zh_cn');"> <i
-                    class="mdui-list-item-icon mdui-icon material-icons">keyboard_return</i>
+                    class="mdui-list-item-icon mdui-icon material-icons">home</i>
                 <div class="mdui-list-item-content">小黑屋(ADK)</div>
             </li>
 
             <li class="mdui-list-item mdui-ripple" onclick="window.open('https://fmkli.js.org/dino');"> <i
-                    class="mdui-list-item-icon mdui-icon material-icons">keyboard_return</i>
+                    class="mdui-list-item-icon mdui-icon material-icons">flag</i>
                 <div class="mdui-list-item-content">咕果小恐龙</div>
             </li>
             
