Update and rename index2.html to index.html

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <div class="rin-name">Fmkli</div>
     <div class="rin-description">欢迎访问我的小站</div>
     <div class="rin-tr"></div>
-    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="detaile.html">更多信息awa</a>
+    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="1index.html">点我进入awa</a>
 </main>
 <footer id="rin-footer">
     <div>
-            ©2021 Fmkli | Made with love by Seirin | BG: <a 
-                   href="https://www.pixiv.net/artworks/56652667" id="bg-link" target="_blank">Pixiv</a>
+            ©2021 Fmkli | Made with love by Seirin
         </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@double/mdui/js/mdui.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@double/assets/js/main.js"></script>
+	
 <!--复制开始-->
 <!--
 	版本：1.0
