--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="rin-name">Fmkli</div>
     <div class="rin-description">欢迎访问我的小站</div>
     <div class="rin-tr"></div>
-    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="1index.html">点我进入AWA</a>
+    <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="1index.html">点我进入AWA</a><br>
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://fmkli.js.org/1index.html">我的博客AWA</a>
 </main>
 <footer id="rin-footer">
