--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </main>
 <footer id="rin-footer">
     <div>
-            ©2021 Fmkli | Made with love by Seirin
+            ©2021 Fmkli | Made with love by Seirin | YOUNK扒主页666
         </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@double/mdui/js/mdui.min.js"></script>
