--- a/1index.html
+++ b/1index.html
@@ -195,8 +195,7 @@
         </div>
 
         <!-- 卡片的内容 -->
-        <div class="mdui-card-content mdui-typo">叭叭~</br>博客公告:</br>1.已撤销小岚的小窝友链</br></br>论坛公告:</br>1.论坛开张！<a href="https://fmklisforum.freeflarum.com/">点我进入</a>
-        </div>
+        <div class="mdui-card-content mdui-typo">叭叭~</br>重要公告<br>YOUNk扒主页66666666666666<br>
 
     </div>
     <!-- 音乐卡片 -->
