--- a/1index.html
+++ b/1index.html
@@ -196,6 +196,7 @@
 
         <!-- 卡片的内容 -->
         <div class="mdui-card-content mdui-typo">叭叭~</br>重要公告<br>YOUNk扒主页66666666666666<br>
+        </div>
 
     </div>
     <!-- 音乐卡片 -->
