--- a/1index.html
+++ b/1index.html
@@ -280,7 +280,7 @@
                 <div class="mdui-list-item-content">随便说说</div>
             </li>
 
-            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://fmklisforum.freeflarum.com'">
+            <li class="mdui-list-item mdui-ripple" onclick="window.location.href='https://bbs.fmkli.ga'">
                 <i class="mdui-list-item-icon mdui-icon material-icons">wifi_tethering</i>
                 <div class="mdui-list-item-content">Fmkli的论坛</div>
             </li>
