--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a class="mdui-btn mdui-btn-raised rin-btn mdui-text-capitalize" href="https://space.bilibili.com/543825809">我的B站</a>
 </main>
 <footer id="rin-footer">
-    <div>
+    <div><a href="https://icp.gov.moe/?keyword=20211455" target="_blank">萌ICP备20211455号</a><br>
             ©2021 Fmkli | Made with love by Seirin | YOUNK扒主页666
         </div>
 </footer>
